# tyclaw.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh  tyc
.kiro/specs/execution-performance-optimization/: .config.kiro  design.md  requirements.md  tasks.md
crates/dingtalk-gateway/: Cargo.toml  README.md  config.example.yaml  demo_client.py
crates/dingtalk-gateway/src/: config.rs  downstream.rs  main.rs  upstream.rs
crates/tyclaw-agent/: Cargo.toml
crates/tyclaw-agent/src/: agent_loop.rs  compression.rs  context_state.rs  lib.rs  loop_helpers.rs  runtime.rs
crates/tyclaw-agent/src/agent/: iteration_budget.rs  mod.rs  phase.rs  tool_runner.rs
crates/tyclaw-app/: Cargo.toml
crates/tyclaw-app/src/: main.rs  monitor.rs
crates/tyclaw-channel/: Cargo.toml
crates/tyclaw-channel/examples/: repair_table.rs
crates/tyclaw-channel/src/: cli.rs  lib.rs
crates/tyclaw-channel/src/dingtalk/: ai_card.rs  bot.rs  credential.rs  gateway.rs  handler.rs  message.rs  mod.rs  sanitize.rs  stream.rs
crates/tyclaw-client/: Cargo.toml
crates/tyclaw-client/src/: main.rs
crates/tyclaw-control/: Cargo.toml
crates/tyclaw-control/src/: audit.rs  config.rs  gate.rs  lib.rs  rate_limiter.rs  rbac.rs  workspace.rs
crates/tyclaw-memory/: Cargo.toml
crates/tyclaw-memory/proptest-regressions/: consolidator.txt
crates/tyclaw-memory/src/: case_store.rs  consolidator.rs  extractor.rs  lib.rs  llm_extractor.rs  memory_store.rs  retriever.rs
crates/tyclaw-orchestration/: Cargo.toml
crates/tyclaw-orchestration/examples/: sdk_demo.rs
crates/tyclaw-orchestration/src/: app_context.rs  builder.rs  bus.rs  config.rs  empty_result.rs  handler.rs  helpers.rs  history.rs  lib.rs  orchestrator.rs  persistence.rs  pollution_filter.rs  reaper.rs  session_manager.rs  skill_manager.rs  term.rs  types.rs
crates/tyclaw-orchestration/src/subtasks/: config.rs  executor.rs  mod.rs  planner.rs  prompt_loader.rs  protocol.rs  reducer.rs  routing.rs  scheduler.rs  tool.rs
crates/tyclaw-orchestration/tests/: subtask_timeout_timing.rs
crates/tyclaw-prompt/: Cargo.toml
crates/tyclaw-prompt/src/: context.rs  lib.rs  nudge_loader.rs  prefix_cache.rs  prompt_store.rs
crates/tyclaw-provider/: Cargo.toml
crates/tyclaw-provider/src/: concurrency.rs  lib.rs  openai_compat.rs  provider.rs  reasoning.rs  types.rs
crates/tyclaw-sandbox/: Cargo.toml
crates/tyclaw-sandbox/src/: docker.rs  lib.rs  noop.rs  types.rs
crates/tyclaw-sandbox/tests/: docker_test.rs
crates/tyclaw-tool-abi/: Cargo.toml
crates/tyclaw-tool-abi/src/: lib.rs
crates/tyclaw-tools/: Cargo.toml
crates/tyclaw-tools/src/: base.rs  email.rs  executor.rs  fileops.rs  filesystem.rs  interaction.rs  lib.rs  precheck.rs  registry.rs  segment.rs  shell.rs  step_cache.rs  truncation.rs
crates/tyclaw-tools/src/timer/: mod.rs  service.rs  tool.rs  types.rs
crates/tyclaw-tools/src/web/: fetch.rs  html.rs  mod.rs  search.rs  security.rs
crates/tyclaw-types/: Cargo.toml
crates/tyclaw-types/src/: constants.rs  error.rs  json_repair.rs  lib.rs  message.rs  tokens.rs
demo/: LTV_SPEC.md  README.md  input.xlsx  result.xlsx
docker/sandbox/: Dockerfile  entrypoint.sh  requirements.txt  smoke_test.sh
docs/: Docker_Browser_Automation.md  SMART_POINTERS.md  TYCLAW_REFERENCE_AUDIT.md  agent_loop_optimize.md  ai_card_template0707.json  bootstrap.md  changes.md  china.md  context_design.md  deployment.md  multi_model_orchestration.md  react_analysis_report.md  recent_changes.md  refactor0322.md  refactor0327.md  security_audit_0327.md  workspace_grouping_and_deployment.md
docs/plans/: 2026-05-13-long-task-timeout-optimization.md  2026-05-17-docker-mount-bind-fix.md
scripts/: migrate_works_chars.sh
workspace/config/: config.example.yaml  prompts.yaml
workspace/skills/code/business-qa/: SKILL.md
workspace/skills/code/code-analysis/: SKILL.md
workspace/skills/dingtalk/dingtalk-calendar/: SKILL.md
workspace/skills/knowledge/project-knowledge/: SKILL.md
workspace/skills/meta/skill-creator/: SKILL.md
workspace/skills/meta/skill-share/: SKILL.md
workspace/skills/meta/skill-store/: SKILL.md
workspace/skills/office/wechat-article/: SKILL.md
workspace/skills/onboarding/onboarding/: SKILL.md
workspace/skills/ops/aliyun-oss/: SKILL.md
workspace/skills/ops/branch-diff/: SKILL.md
workspace/tools/: collect_changes.py  excel_diff.py  excel_reader.py  sync_branches.py  test_dingtalk_markdown.py  utils.py  worktree_manager.py
(+6 files in other folders)
