[package]
name = "tyclaw-control"
version = "0.1.0"
edition = "2021"

[dependencies]
tyclaw-types = { workspace = true }
tyclaw-tool-abi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
md-5 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
